Modified routes and added new, customers and customer form components
