# src/validation/customer.ts
@@ -1,45 +1,50 @@
 import {
-  CreateCustomerRequestGenderEnum,
-  CreateCustomerRequestIdTypeEnum,
+  StoreCustomerRequestGenderEnum,
+  StoreCustomerRequestIdTypeEnum,
+  StoreCustomerRequestMaritalStatusEnum,
 } from "@/openapi/generated";
 import type { InferType } from "yup";
 import { mixed, number, object, string } from "yup";
 
-export const storeCustomerValidationSchema = object({
+export const personalInfoValidationSchema = object({
   firstName: string().required().label("First name"),
   lastName: string().required().label("Last name"),
   phoneNumber: string().required().label("Phone number"),
-  gender: mixed<CreateCustomerRequestGenderEnum>()
-    .oneOf(Object.values(CreateCustomerRequestGenderEnum))
+  gender: mixed<StoreCustomerRequestGenderEnum>()
+    .oneOf(Object.values(StoreCustomerRequestGenderEnum))
     .required()
-    .label("Gender")
-    .required(),
+    .label("Gender"),
   dateOfBirth: string().label("Date of birth").required(),
-
   secondaryPhone: string().optional().label("Secondary phone"),
-  email: string().email().required().label("Email"),
+  email: string().optional().email().label("Email"),
   occupation: string().label("Occupation").optional(),
   gpAddress: string().label("Ghana Post Code").optional(),
   postalAddress: string().label("Postal address").optional(),
-  idNumber: string().label("ID number").optional(),
-  idType: mixed<CreateCustomerRequestIdTypeEnum>()
-    .oneOf(Object.values(CreateCustomerRequestIdTypeEnum))
+  maritalStatus: mixed<StoreCustomerRequestMaritalStatusEnum>()
     .required()
+    .oneOf(Object.values(StoreCustomerRequestMaritalStatusEnum))
+    .label("Marital Status"),
+  sourceOfIncome: string().label("Source of income").optional(),
+});
+
+export type PersonalInfoForm = InferType<typeof personalInfoValidationSchema>;
+
+export const identificationValidationSchema = object({
+  idNumber: string().label("ID number").optional(),
+  idType: mixed<StoreCustomerRequestIdTypeEnum>()
+    .oneOf(Object.values(StoreCustomerRequestIdTypeEnum))
     .label("ID type")
     .optional(),
-  idIssueDate: string().optional().label("ID issue date").optional(),
-  idExpiryDate: string().optional().label("ID expiry date").optional(),
-  idIssuingAuthority: string()
-    .optional()
-    .label("ID issuing authority")
-    .optional(),
-  idIssuingCountry: string().optional().label("ID issuing country").optional(),
+  idIssueDate: string().optional().label("ID issue date"),
+  idExpiryDate: string().optional().label("ID expiry date"),
+  idIssuingAuthority: string().label("ID issuing authority"),
+  idIssuingCountry: string().optional().label("ID issuing country"),
   idFrontUrl: mixed().label("Front of ID").optional(),
   idFrontKey: number().label("ID front key").optional(),
   idBackUrl: string().label("Back of ID url").optional(),
   idBackKey: number().label("Back of ID key").optional(),
-  maritalStatus: string().label("Marital Status").optional(),
-  sourceOfIncome: string().label("Source of income").optional(),
 });
 
-export type StoreCustomerForm = InferType<typeof storeCustomerValidationSchema>;
+export type IdentificationInfoForm = InferType<
+  typeof identificationValidationSchema
+>;
